updated alignment fixes

--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -454,6 +454,7 @@ div.divBlockEmptylastChild:first-child {
             max-width: 100%;
             overflow: hidden;
             padding-right: 10px;
+            line-height: normal;
         }
         img{
             float: right;
@@ -490,6 +491,7 @@ div.divBlockEmptylastChild:first-child {
             max-width: 100%;
             overflow: hidden;
             padding-right: 10px;
+            line-height: normal;
         }
         img{
             float: right;
@@ -524,6 +526,7 @@ div.divBlockEmptylastChild:first-child {
             max-width: 100%;
             overflow: hidden;
             padding-right: 10px;
+            line-height: normal;
         }
         img{
             float: right;
@@ -589,6 +592,7 @@ div.divBlockEmptylastChild:first-child {
                 max-width: 100%;
                 overflow: hidden;
                 padding-right: 10px;
+                line-height: normal;
             }
             img{
                 float: right;
